# train-inspector

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: README.md
docs/superpowers/plans/: 2026-06-11-slit-flow-supersampling.md
docs/superpowers/specs/: 2026-06-11-slit-flow-supersampling-design.md
feedback/: spec-review-lead-dev.md
spec/: SPEC.md
src/train_inspector/: __init__.py  cli.py  composite.py  decode.py  diagnostics.py  encode.py  flow.py  motion.py  pipeline.py  segment.py
tests/: conftest.py  helpers.py  test_composite.py  test_e2e.py  test_encode.py  test_flow.py  test_motion.py  test_segment.py
